css/style.css
/* Style Css to This Template */
/* Template Name: Starter Theme to Web Projects*/


/*** BODY ***/
body {
    font-family: 'Roboto', sans-serif;
	font-size: 1.3em;
	line-height: 1.8em;
	color: #161616;
	background-color: transparent;
	letter-spacing: 0.03em;
}
/*** THE END BODY ***/

/*** MEDIA ***/
@media only screen and (max-width: 768px) {
.prjct-wrt-right {
    font-size: 1.5em !important;
    top: 9% !important;
}

.prjct-wrt-left {
    font-size: 1.5em !important;
    top: 9% !important;
}

.h1, h1 {
	font-size: 2.6em !important;
}

.tfv {
	font-size: 2.6em !important;
	text-align: center;
}

.hero-bg {
    height: 30vh !important;
	padding-top: 10vh !important;
	padding-left: 15px !important;
}

.h2, h2 {
	font-size: 1.8em !important;
}

.btn-allprojects {
	font-size: .9em !important;
}

.prjct-bg {
	margin-top: 3em !important;
	margin-bottom: 3em !important;
}

.img-prjct-logo {
	display:none !important;
}

.lg-col-wrt {
	font-size: 1.8em !important;
	padding: 3% !important;
	margin-top: 200px !important;
}

.lg-col-wrt2 {
	font-size: 1.8em !important;
	padding: 3% !important;
	text-align: center !important;
}

.lg-col-ttl {
	font-size: 1.6em !important;
	padding-left: 3%;	
}

.lg-col-ttl2 {
	font-size: 2.6em !important;
	padding-left: 3% !important;	
}

.lg-col-bg {
	margin-top: 3em !important;
	margin-bottom: 3em !important;
}

.lg-col-bg2 {
	margin-top: 3em !important;
	margin-bottom: .5em !important;
	/* display: none !important; */
}

.nav-ttl {
	top: 36px !important;
	font-size: 1.3em !important;
	position: absolute !important;
	left: 5% !important;
	display: none;
}

.img-hr-lg {
    height: 35px !important;
    width: 35px !important;
	margin-top: 27px !important;
	/* display: none; */
}

.ftr-lnk {
	font-size: 1.8em !important;
	height: 3em !important;
    text-align: center !important;
	padding-left: 0px !important;
}

.prjct-wrt-left-wrk {
	font-size: 1.5em !important;
	top: 9.5% !important;
}

.prjct-wrt-right-wrk {
	font-size: 1.5em !important;
    top: 9.5% !important;	
}

.img-prjct-wrk {
	padding-right: 0px !important;
	padding-left: 0px !important;
}

.img-prjct-wrk:hover {
	padding-right: 0px !important;
	padding-left: 0px !important;
	border-radius: 0px !important;
}

.prjct-wrt-left-wrk-big {
	font-size: 1.5em !important;
	top: 9.5% !important;
}

.img-prjct-wrk-big {
	padding-right: 0px !important;
	padding-left: 0px !important;
}

.img-prjct-wrk-big:hover {
	padding-right: 0px !important;
	padding-left: 0px !important;
}

.img-prjct {
	padding-right: 0px !important;
	padding-left: 0px !important;
}

.img-prjct:hover {
	border-radius: 0px !important;
}

.works-hero-bg {
    height: 50vh !important;
    padding-top: 28vh !important;	
}

.blog-hero-bg {
	padding-top: 31vh !important;
}

.lgs-bg {
	margin-top: 0em !important;
	margin-bottom: 0.6em !important;
}

.btn-ltstlk {
	padding: 3em !important;
	font-size: 1em !important;
}

.img-lg-col2 {
	padding-left: 0px !important;
	padding-right: 0px !important;
	/* display: none !important; */
}

.shw-cs2 {
	font-size: 2.5em !important;
	padding-top: 5% !important;
}

.shw-cs {
	font-size: 1.1em !important;
}

.shw-cs3 {
	font-size: 1.1em !important;
	text-align: center !important;
	padding-left: 0px !important;
}

.shw-cs4 {
    font-size: 1.8em !important;
}

.shw-cs4-r {
    font-size: 1.1em !important;
}

.allprojects-bg {
	margin-bottom: 2em !important;
    margin-top: 2em !important;
}

.allprojects-lgs-bg2 {
	margin-bottom: 3.6em !important;
}

.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
	margin-right: 0px !important;
}

.slider-bg {
	padding-bottom: 0 !important;
}

}
/*** THE END MEDIA ***/



/*** GENERAL LINK ***/
a:-webkit-any-link {
	text-decoration: underline;
}
/*** THE END GENERAL LINK ***/

/*** h1, h2, h3, h4, h5, h6, h7, h8, h9, ***/
.h1, h1 {
	font-size: 3.1em;
	font-weight: 700;
	letter-spacing: .03em;
	line-height: 1.7em;
	font-family: 'Roboto', sans-serif;
	color: #161616;
}

.h2, h2 {
	font-size: 2em;
	font-weight: 300;
	letter-spacing: .03em;
	line-height: 1.7em;
    font-family: 'Roboto', sans-serif;
	color: #161616;
}

.h3, h3 {
	font-size: 1.3em;
	font-weight: 400;
	letter-spacing: .03em;
	line-height: 1.7em;
	color: #999;
	font-family: 'Roboto', sans-serif;	
}

h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
	margin-top: 0;
	margin-bottom: 0;
}

h1.fade-anime-top {
    display: flex;
    align-items: center;
    flex-wrap: wrap; /* Allows the content to wrap to the next line if necessary */
}

h1.fade-anime-top img {
	margin-right: 10px;
}

h1.fade-anime-top a:first-child img {
    margin-left: 30px;  /* Padding to the first icon after the text */
}


/*** THE END h1, h2, h3, h4, h5, h6, h7, h8, h9, ***/

/*** HERO HEADER ***/
.hero-bg {
	background: transparent;
	margin: 0 auto;
	text-align: left;
	height: 50vh;
	padding-top: 20.5vh;
}
/*** THE END HERO HEADER ***/

/*** SLIDER HERO HEADER ***/
.slider-bg {
	background: transparent;
	margin: 0 auto;
	text-align: center;
	padding-top: 5em;
	padding-bottom: 5em;	
}
/*** THE END SLIDER HERO HEADER ***/

/*** BLOG HERO HEADER ***/
.blog-hero-bg {
	background: transparent;
	margin: 0 auto;
	text-align: center;
	height: 45vh;
	padding-top: 25vh;
}
/*** THE END BLOG HERO HEADER ***/

/*** WORKS HERO HEADER ***/
.works-hero-bg {
	background: transparent;
	margin: 0 auto;
	text-align: center;
	height: 65vh;
	padding-top: 30vh;
}
/*** THE END WORKS HERO HEADER ***/

/*** FOOTER BACKGROUND ***/
.footer-bg {
	margin-top: 5em;
	margin-bottom: 4.3em;
	height: 11em;
}
/*** THE END FOOTER BACKGROUND ***/

/*** FOOTER LINKS ***/
.ftr-lnk {
	font-size: 2em;
	letter-spacing: .04em;
	line-height: 1.7em;
	text-align: left;
	color: #161616;
	font-family: 'Roboto', sans-serif;
    font-weight: 300;
    height: 2.5em;
    padding-left: 0;
}

.ftr-lnk:hover {
	color: #161616;
	text-decoration: none;
}
/* ... */

